# pydicom-background-editor

./: .coverage  .gitignore  AGENTS.md  README.md  background_editor_example_input.csv  background_editor_example_input2.csv  out.dcm  print_output.pl  produce_test_input.pl  pyproject.toml  short.csv  very_simple_real.csv
.github/workflows/: python-tests.yml
src/pydicom_background_editor/: __init__.py  editor.py  input.py  main.py  path.py
tests/: dataset.py  test_auto_sequence_creation.py  test_edit_translate.py  test_editor.py  test_editor_empty_sequence.py  test_main.py  test_path_parsing.py  test_path_traversal.py  test_sequence_creation.py  test_sequence_workflows.py
