[project]
name = "pydicom-background-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quasar Jarosz", email = "quasar@uams.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pydicom>=3.0.1",
]

[project.scripts]
main = "pydicom_background_editor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
